test/libsolidity/syntaxTests/imports/name_clash_in_import_enum_contract.sol
==== Source: a ====
enum E { A }
==== Source: b ====
import "a";
contract E { }
// ----
// DeclarationError 2333: (b:12-26='contract E { }'): Identifier already declared.
